# music-app

./: .SRCINFO  .dockerignore  .gitignore  Dockerfile  PKGBUILD  README.md  TODO.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/: release.yml
.github/workflows/: release.yml  release_and_publish.yml
app/: globals.css  layout.tsx  page.tsx
app/settings/: page.tsx
components/: AudioControls.ts  KeyboardShortcutsHelp.tsx  PlayerBar.tsx  Scrambletext.tsx  TopBar.tsx  TrackCard.tsx  TrackGrid.tsx
components/types/: track.ts
components/ui/: button.tsx
hooks/: useAudioPlayer.ts  useKeyboardShortcuts.ts  usePlaylistStore.ts
pkg/Musik/: .BUILDINFO  .MTREE  .PKGINFO
pkg/Musik/usr/share/applications/: Musik.desktop
src/: Musik_0.1.3_amd64.deb
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: android_handler.rs  lib.rs  main.rs  scan.rs  spotdl.rs
utils/: filetoBlob.ts
