[package]
name = "Musik"
version = "0.1.7"
description = "A music playe"
authors = ["Arjav Jain <arjavjain0703@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
tauri-plugin-fs = "2"
lofty = "0.22.4"
rayon = "1.10.0"
base64 = "0.22.1"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
log = "0.4.27"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
thiserror = "2.0.12"
tokio = "1.46.0"
tauri-plugin-notification = "2"
which = "8.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

